<resources>
    <string name="app_name">PEC3App</string>
    <string name="maps">Maps</string>
    <string name="museus">Museums</string>
    <string name="contacts">Contacts</string>
    <string name="quizzes">Quizzes</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="noImage">No picture available</string>
    <string name="pictureSaved">Picture saved</string>
</resources>
