<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/relay_maps"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@color/darksalmon"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView1"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_map_white_18dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/maps"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_below="@id/imgView1"/>
                    </RelativeLayout>



                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relay_museums"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/khaki"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_museum_white_18dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/museus"
                            android:textSize="16sp"
                            android:layout_below="@id/imgView2"/>
                    </RelativeLayout>



                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/relay_contacts"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"

                    android:background="@color/greenyellow"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_contacts_white_18dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/contacts"
                            android:textSize="16sp"
                            android:layout_below="@id/imgView3"/>
                    </RelativeLayout>



                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relay_quizzes"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/limegreen"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView4"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_chat_bubble_white_18dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/quizzes"
                            android:textSize="16sp"
                            android:layout_below="@id/imgView4"/>
                    </RelativeLayout>



                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/relay_setting"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/violet"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView5"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_settings_white_18dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/setting"
                            android:textSize="16sp"
                            android:layout_below="@id/imgView5"/>
                    </RelativeLayout>



                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relay_help"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/khaki"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgView6"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="centerInside"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:src="@drawable/baseline_live_help_white_18dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/help"
                            android:textSize="16sp"
                            android:layout_below="@id/imgView6"/>
                    </RelativeLayout>



                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
